Initial unified G1 details parsing + bug fixes.